<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Message Receiver</string>
    <string name="action_settings">Settings</string>
    <string name="install_success">Program have successful install !\nPlease choose the mode of reminding !</string>
    <string name="ok">OK</string>
    <string name="receive_from">Receive a message from:\n</string>
    <string name="content">Content is :\n</string>
    <string name="close">Close</string>
    <string name="call">Call</string>
    <string name="reply">Reply</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="reply_msg">Reply Message to:</string>
    <string name="send_finish">Message have already successful send.</string>
    <string name="about">Powered by Hongchao Zhang, any comments and bugs please send e-mail to doublezhanc@gmail.com \nThanks!</string>
    <string name="show_toast">Only Toast</string>
    <string name="show_dialog">Show Dialog</string>

</resources>
