<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:text="@string/about"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:text="@string/install_success"
        android:textColor="#FF23E7F1"
        android:textSize="12dp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RadioButton
            android:id="@+id/toastShow"
            android:layout_width="284dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:checked="true"
            android:drawableLeft="@drawable/toast_show" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/show_toast" />

        <RadioButton
            android:id="@+id/dialogShow"
            android:layout_width="284dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/dialog_show" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/show_dialog" />
    </RadioGroup>

</RelativeLayout>