<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="#F5F5F5F5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#FF000088"
        android:textSize="15dp" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FF000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.33"
            android:text="@string/close" />

        <Button
            android:id="@+id/button2"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/call" />

        <Button
            android:id="@+id/button3"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/reply" />
    </LinearLayout>

</LinearLayout>